商品分类客户端

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,14 @@
 
     <string name="app_name">PalmCampusMarket_Client</string>
     <string name="hello_world">Hello world!</string>
+    
+     <string-array name="commoditytype">
+     <item>掏书</item>  
+    <item>掏车</item>  
+    <item>电子产品</item>  
+    <item>生活用品</item>
+    <item>食品</item>
+    <item>其他</item>  
+    </string-array>
 
 </resources>
